change code after review

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>VIJP Co., Ltd</title>
+    <title>VIJP - 信頼を礎に、未来を発し、世界へつなぐ</title>
     <base href="/" />
 
     <meta content="width=device-width, initial-scale=1" name="viewport" />
